# sps_enose_project

./: README.md
data_CSV_dan_JSON/: bawang bombai 1_2.csv  bawang bombai 1_3.csv  bawang bombai 1_4.csv  bawang bombai 1_5.csv  bawang merah 2_2.csv  bawang merah 2_3.csv  bawang merah 2_4.csv  bawang merah 2_5.csv  bawang putih 3_2.csv  bawang putih 3_3.csv  bawang putih 3_4.csv  bawang putih 3_5.csv  daun bawang 4_3.csv  daun bawang 4_4.csv  daun bawang 4_5.csv
signal_processing/backend/: Cargo.toml
signal_processing/backend/src/: main.rs
signal_processing/frontend/: main.py
signal_processing/frontend/data/: Daun Bawang 4_20251125_170617.csv  Daun Bawang 4_20251125_171058.csv
untukarduinosps/: untukarduinosps.ino
