[package]
name = "e_nose"
version = "3.0.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
serialport = "4"
tokio = { version = "1", features = ["full"] }
influxdb2 = "0.5.2"